# dumplingsAI

./: Agent_Base_.py  Agent_list.py  CHANGELOG.md  LICENSE  LOGGING_GUIDELINES.md  README.md  RELEASING.md  __init__.py  _banner.py  agent_queue.py  agent_tool.py  anthropic_agent.py  cli.py  errors.py  http_utils.py  llm_transport.py  logging_config.py  mcp_bridge.py  pyproject.toml  skill.py  skill_bridge.py  tool_runner.py
.github/workflows/: ci.yml  publish.yml  python-package.yml  python-publish.yml
examples/: README.md  example1_basic.py  example2_custom_tools.py  example3_multi_agent.py  example4_mcp.py  example5_custom_output.py  example6_anthropic_custom_provider.py  example7_unified_agent.py
tests/: test_agent_queue.py  test_async_smoke.py  test_http_utils.py  test_placeholder.py  test_pydantic_tools.py  test_tool_runner.py
