[project]
name = "Dumplings"
version = "0.1.1"
description = "AI Company - 基于 LLM 的多智能体协作系统框架"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "loguru>=0.7.3",
    "lxml>=6.0.2",
    "mcp>=1.14.1",
    "pyyaml>=6.0",
    "requests>=2.32.5",
    "watchdog>=3.0",
]

[tool.setuptools]
py-modules = ["Agent_Base_", "Agent_list", "agent_tool", "logging_config", "mcp_bridge", "skill", "skill_bridge"]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
default = true
