[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dumplingsAI"
version = "0.1.1"
description = "Lightweight multi-agent collaboration framework on top of LLMs"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Secret Dumplings" }]
keywords = ["llm", "agent", "multi-agent", "mcp", "ai-framework", "anthropic", "claude"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "beautifulsoup4>=4.14.2",
    "loguru>=0.7.3",
    "lxml>=6.0.2",
    "mcp>=1.14.1",
    "pyyaml>=6.0",
    "requests>=2.32.5",
    "watchdog>=3.0",
]

[project.urls]
Homepage = "https://github.com/Secret-Dumplings/dumplingsAI"
Repository = "https://github.com/Secret-Dumplings/dumplingsAI.git"
Issues = "https://github.com/Secret-Dumplings/dumplingsAI/issues"

[tool.setuptools]
packages = ["dumplingsAI"]
package-dir = {"dumplingsAI" = "."}
include-package-data = true

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra"
asyncio_mode = "auto"

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
default = true

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]
